--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>bg-remove</title>
 </head>
 <body>
-    <div class="header">
+    <!-- <div class="header">
         <h2>Background Remove</h2>
-    </div>
+    </div> -->
     <div class="container">
        <div class="img-box">
         <img src="assests/transparent.png" alt="image" width="100%">
@@ -23,4 +23,5 @@
     </div>
 <script src="script.js"></script>
 </body>
+
 </html>
